--- a/src/component/PipeLine/index.less
+++ b/src/component/PipeLine/index.less
@@ -85,3 +85,16 @@
 .pipeline-continue-body {
     padding-bottom: 20px;
 }
+
+.pipeline-step-view {
+    width: 100%;
+    display: block;
+}
+
+.pipeline-log-view {
+    float: right;
+}
+
+.pipeline-log-view:hover {
+    color: #18b3b3;
+}
