--- a/src/component/HeaderMenu/index.less
+++ b/src/component/HeaderMenu/index.less
@@ -3,6 +3,10 @@
     width: 100%;
 }
 
+.menu-sider {
+    box-shadow: inset 0 0 5px rgba(0,21,41,.05)
+}
+
 .menu-fold {
     text-align: center;
     position: absolute;
@@ -28,4 +32,38 @@
     overflow: auto;
     // margin-bottom: 24px;
     padding: 8px 0px;
+}
+
+.menu-logo-vertical {
+    height: 54px;
+    vertical-align: middle;
+    border-bottom: 1px solid rgba(5,5,5,.06);
+    line-height: 54px;
+    font-weight: 600;
+    font-size: 16px;
+    white-space:nowrap;
+}
+
+.menu-title-vertical {
+    margin-left: 11px;
+}
+
+.breadcrumb-comp {
+    list-style: none;
+    position: relative;
+    margin: 0;
+    padding-left: 0;
+    background-color: #fff;
+    height: 32px;
+    line-height: 32px;
+    border-radius: 0!important;
+    border-bottom: 1px solid #e6e6e6;
+    width: 100%;
+}
+
+.breadcrumb-comp > nav{
+        display: inline-block;
+        font-size: 12px;
+        line-height: 32px;
+        margin-left: 16px;
 }
